--- a/index.html
+++ b/index.html
@@ -302,56 +302,14 @@
 </div>
 
 <script>
-/* ═══════════════════════════════════════
-   조례 비교검색 – GitHub Pages 버전
-   ═══════════════════════════════════════ */
 const WORKER = 'https://law-proxy.kyungsamko.workers.dev';
-
 const OC     = 'kyungsamko';
 const SEARCH = 'http://www.law.go.kr/DRF/lawSearch.do';
 const DETAIL = 'http://www.law.go.kr/DRF/lawService.do';
 
-const PROXIES = [
-  {
-    name: 'allorigins(json)',
-    fetch: async (url, signal) => {
-      const r = await fetch(`https://api.allorigins.win/get?url=${encodeURIComponent(url)}`, {signal});
-      if(!r.ok) throw new Error(`HTTP ${r.status}`);
-      const j = await r.json();
-      return j.contents;
-    }
-  },
-  {
-    name: 'allorigins(raw)',
-    fetch: async (url, signal) => {
-      const r = await fetch(`https://api.allorigins.win/raw?url=${encodeURIComponent(url)}`, {signal});
-      if(!r.ok) throw new Error(`HTTP ${r.status}`);
-      return r.text();
-    }
-  },
-  {
-    name: 'corsproxy.io',
-    fetch: async (url, signal) => {
-      const r = await fetch(`https://corsproxy.io/?url=${encodeURIComponent(url)}`, {signal});
-      if(!r.ok) throw new Error(`HTTP ${r.status}`);
-      return r.text();
-    }
-  },
-  {
-    name: 'thingproxy',
-    fetch: async (url, signal) => {
-      const r = await fetch(`https://thingproxy.freeboard.io/fetch/${url}`, {signal});
-      if(!r.ok) throw new Error(`HTTP ${r.status}`);
-      return r.text();
-    }
-  },
-];
-let goodProxy = 0;
-
 let KW = '';
 const detailCache = {};
 
-/* ── 유틸 ── */
 const $ = id => document.getElementById(id);
 const xmlParse = txt => new DOMParser().parseFromString(txt,'text/xml');
 
@@ -366,30 +324,25 @@ function setStatus(r, cls, msg){
   $(`st-${r}`).textContent = msg;
 }
 
-/* ── 프록시 Fetch — 실패 시 다음 프록시 자동 시도 ── */
 async function apiFetch(baseUrl, params){
   const qs = new URLSearchParams(params).toString();
   const raw = `${baseUrl}?${qs}`;
+  const url = `${WORKER}/?url=${encodeURIComponent(raw)}`;
 
-  let lastErr;
-  for(let i = 0; i < PROXIES.length; i++){
-    const idx = (goodProxy + i) % PROXIES.length;
-    const proxy = PROXIES[idx];
-    try {
-      const ac = new AbortController();
-      const t = setTimeout(() => ac.abort(), 10000);
-      const text = await proxy.fetch(raw, ac.signal);
-      clearTimeout(t);
-      if(!text || text.length < 20) throw new Error('빈 응답');
-      goodProxy = idx;
-      console.log(`✓ ${proxy.name} 성공`);
-      return xmlParse(text);
-    } catch(e){
-      console.warn(`✗ ${proxy.name}: ${e.message}`);
-      lastErr = e;
-    }
+  const ac = new AbortController();
+  const t = setTimeout(() => ac.abort(), 15000);
+  try {
+    const res = await fetch(url, { signal: ac.signal });
+    clearTimeout(t);
+    if(!res.ok) throw new Error(`HTTP ${res.status}`);
+    const text = await res.text();
+    if(!text || text.length < 20) throw new Error('빈 응답');
+    return xmlParse(text);
+  } catch(e){
+    clearTimeout(t);
+    if(e.name === 'AbortError') throw new Error('시간 초과');
+    throw e;
   }
-  throw new Error(`모든 프록시 실패 — ${lastErr?.message || '알 수 없음'}`);
 }
 
 /* ── 조례 목록 검색 ── */
@@ -552,9 +505,9 @@ async function doSearch(){
       setStatus(r, items.length?'ok':'', `${label} ${items.length}건`);
     } catch(e){
       console.error(`[${r}]`, e);
-      if(e.message.includes('Failed to fetch') || e.message.includes('NetworkError') || e.message.includes('모든 프록시')){
-        $(`body-${r}`).innerHTML = `<div class="err-box"><p>프록시 연결 실패<br><span style="font-size:11px;color:var(--text-muted)">${e.message}<br>F12 콘솔에서 상세 로그를 확인하세요.</span></p></div>`;
-        errBox.textContent = '⚠ 프록시 연결 실패 — 잠시 후 재시도해 주세요.';
+      if(e.message.includes('Failed to fetch') || e.message.includes('NetworkError') || e.message.includes('시간 초과')){
+        $(`body-${r}`).innerHTML = `<div class="err-box"><p>프록시 연결 실패<br><span style="font-size:11px;color:var(--text-muted)">${e.message}</span></p></div>`;
+        errBox.textContent = '⚠ Workers 프록시 연결 실패';
         errBox.classList.add('show');
       } else {
         $(`body-${r}`).innerHTML = `<div class="err-box"><p>검색 실패: ${e.message}</p></div>`;
